# xfac

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Config.cmake.in  LICENSE.rst  README.md  build.sh  empty.cpp
doc/: Doxyfile
docs/: Doxyfile  _config.yml  _toc.yml  conf.in.py  conf.py  index.rst  intro.md  references.bib  requirements.txt
docs/api/: api1.md  api2.md  api3.md  api4.md  intro-api.md
docs/tutorial-python/: integral_nd.ipynb  intro-tutorial.md  quantics1d.ipynb  quantics2d.ipynb
example/: CMakeLists.txt
example/autoMPO/: CMakeLists.txt  autoMPO.cpp
example/integral/: CMakeLists.txt  integral.cpp
example/ising/: CMakeLists.txt  ising.cpp
example/quantics1d/: CMakeLists.txt  quantics1d.cpp
example/quantics2d/: CMakeLists.txt  quantics2d.cpp
example/quanticsFourier/: CMakeLists.txt  quanticsFourier.cpp
include/xfac/: cubemat_helper.h  grid.h  index_set.h
include/xfac/matrix/: adaptive_lu.h  cross_data.h  mat_decomp.h  matrix_interface.h  pivot_finder.h
include/xfac/tensor/: auto_mpo.h  cheby_tensor_ci.h  tensor_ci.h  tensor_ci_2.h  tensor_ci_converter.h  tensor_function.h  tensor_train.h
include/xfac/tree/: tensor_tree.h  tensor_tree_ci.h  tree.h
notebook/: example_integral.ipynb  example_ising.ipynb  example_timing.ipynb  guassian.ipynb
python/: CMakeLists.txt  python_bindings.cpp
test/: CMakeLists.txt  qFP.txt  qFP_1.txt  test_SVDDecomp.cpp  test_benchmark_problems.cpp  test_ci_converter.cpp  test_ctensor_cheby.cpp  test_cubemat_helper.cpp  test_main.cpp  test_matrix_ci.cpp  test_matrix_ci_2.cpp  test_tensor_ci.cpp  test_tensor_ci_2.cpp  test_tensor_tree_ci.cpp  test_timing.cpp  test_tree.cpp
